--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
         }
     </style>
 
+    <script>
+        function goal() {}
+    </script>
+
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+    </script>
 
 
 
